--- a/TP1/informe.tex
+++ b/TP1/informe.tex
@@ -80,16 +80,26 @@ A partir de la definición particular del experimento de este trabajo, así como
 \label{sec:DisenoExperimento}
 
 \subsection{Participantes}
-\ldots
+
+Del experimento participaron 6 personas, de entre 20 y 33 años, con visión normal o corregida.
 
 \subsection{Est\'imulos presentados'}
 Letras del alfabeto español, en mayúscula y minúscula (incluyendo ñ).
-Tres tipografías (Arial, Kunstler y otra de letras famosas)
+Tres tipografías: Arial, Kunstler y otra de letras reconocidas (denominadas Famosas).
 
-*** Acá va imagen de todas las tipografías, en su versión mayúscula y minúscula  (como en Pelli2006)****
+Se generó 16 bloques de 100 estímulos cada una, donde se presentó mitad de los estímulos en mayúsculas y luego la otra mitad en minúscula.
+
+A cada estímulo se le aplicó un filtrados por bandas de frecuencia, de manera de mostrar información de 32 a 16 ciclos/letra,
+
+\begin{figure}
+ \includegraphics[scale=0.23]{letras.png}
+  \caption{Conjunto completo de letras utilizadas en el experimento}
+  \label{figura:conjuntoLetras}
+\end{figure}
+
 
 \subsection{Procedimiento}
-\ldots
+
 
 \section{Resultados}
 \ldots
