--- a/TP1/informe.tex
+++ b/TP1/informe.tex
@@ -35,7 +35,7 @@ El reconocimiento de letras\ldots
 % + variación propuesta. 
 % + Diseño experimentaldetallado 
 
-\section{Introducción}
+\section{Introducci\'on}
 \label{sec:Introduccion}
 \ldots
 
@@ -47,7 +47,7 @@ Reconocer rasgos utilizados por una persona para reconocer letras, presentadas u
 \ldots
 
 
-\section{Hipótesis}
+\section{Hip\'otesis}
 
 A partir de la definición particular del experimento de este trabajo, así como por lo registrado en trabajos anteriores relacionados con el reconocimiento de letras, se definió el siguiente conjunto de hipótesis a verificar:
 \begin{enumerate}
@@ -61,17 +61,17 @@ A partir de la definición particular del experimento de este trabajo, así como
     \subitem H0: No hay variaciones en la performance para letras vistas durante el experimento, ni para aquellas definidas como conocidas.
     \subitem Ref:
  \item A mayor complejidad de las letras, menor eficiencia en el reconocimiento \cite{PelliEtAl06:LetterIdentification}
-    \subitem H0: 
-    \subitem Ref:
+    \subitem H0: No habrá variación en la eficiencia entre aquellas letras de mayor y menor complejidad.
+    \subitem Ref: Existe una variación significativa de la eficiencia entre letras de alta y baja complejidad.
  \item Los rasgos de una letra (e.g., 'b') varían de acuerdo a la tipografía que se esté utilizando \cite{PelliEtAl06:LetterIdentification}.
-    \subitem H0: 
-    \subitem Ref:
+    \subitem H0: No hay variaciones en los rasgos detectados para un misma letra, inclusive con diferentes tipografías.
+    \subitem Ref: Las zonas relevantes (rasgos) de una letra se ven afectadas por las características de la tipografía en cuestión.
  \item Habrá una variación en los rasgos de la letra `n' con relación a la incorporación de la letra `ñ' en todas las tipografías (cf. \cite{FisetEtAl08:BubblesForLetters}).
-    \subitem H0: 
-    \subitem Ref:
+    \subitem H0: No habrá cambios en los rasgos de la letra `n' por la incorporación de la `ñ'
+    \subitem Ref: La incorporación de la `ñ' agrega rasgos a la n para permitir su identificación.
  \item Un observador ideal utilizará rasgos distintos a los que utiliza un ser humano para la identificación de las letras \cite{PelliEtAl06:LetterIdentification}.
-    \subitem H0: 
-    \subitem Ref:
+    \subitem H0: Los rasgos utilizados por un observador ideal son los mismo que los que resultan del análisis de un ser humano.
+    \subitem Ref: Hay variaciones significativas entre los rasgos utilizados por un observador ideal y los sujetos del experimento.
 \end{enumerate}
 
 
@@ -92,7 +92,7 @@ Se generó 16 bloques de 100 estímulos cada una, donde se presentó mitad de lo
 A cada estímulo se le aplicó un filtrados por bandas de frecuencia, de manera de mostrar información de 32 a 16 ciclos/letra,
 
 \begin{figure}
- \includegraphics[scale=0.23]{letras.png}
+ \includegraphics[scale=0.60]{letras.png}
   \caption{Conjunto completo de letras utilizadas en el experimento}
   \label{figura:conjuntoLetras}
 \end{figure}
