Se actualizó informe

--- a/TP1/informe.tex
+++ b/TP1/informe.tex
@@ -59,7 +59,8 @@ A partir de la definición particular del experimento de este trabajo, así como
     \subitem Refutación (Ref): En comparación con las otras dos tipografías, la tasa de aciertos de una letra debería comportarse linealmente con respecto a su complejidad.
  \item Aún en casos en los que el sujeto no cree haber visto --- o ni siquiera conoce --- alguna tipografía famosa, el porcentaje de aciertos mejora significativamente.
     \subitem H0: No hay variaciones en la performance para letras vistas durante el experimento, ni para aquellas definidas como conocidas.
-    \subitem Ref:
+    \subitem Ref: La mejora en la performance decrece desde las tipografías conocidas vistas en el experimento, las 
+	    famosas conocidas pero no vistas, las tipografías famosas no conocidas y las tipografías no famosas de similar complejidad.
  \item A mayor complejidad de las letras, menor eficiencia en el reconocimiento \cite{PelliEtAl06:LetterIdentification}
     \subitem H0: No habrá variación en la eficiencia entre aquellas letras de mayor y menor complejidad.
     \subitem Ref: Existe una variación significativa de la eficiencia entre letras de alta y baja complejidad.
@@ -73,7 +74,6 @@ A partir de la definición particular del experimento de este trabajo, así como
     \subitem H0: Los rasgos utilizados por un observador ideal son los mismo que los que resultan del análisis de un ser humano.
     \subitem Ref: Hay variaciones significativas entre los rasgos utilizados por un observador ideal y los sujetos del experimento.
 \end{enumerate}
-
 
 
 \section{Dise\~no del Experimento}
