Nueva matriz de relación de marcas famosas (encuesta) por letras famosas

--- a/TP1/informe.tex
+++ b/TP1/informe.tex
@@ -99,6 +99,7 @@ A cada estímulo se le aplicó un filtrados por bandas de frecuencia, de manera 
 
 
 \subsection{Procedimiento}
+Se presentan letras en forma individual por 200ms, para que luego el sujeto presione una tecla para indicar cuál fue la letra que se le acaba de mostrar.
 
 
 \section{Resultados}
