esqueleto de presentación en latex

--- a/TP1/informe.tex
+++ b/TP1/informe.tex
@@ -57,9 +57,9 @@ A partir de la definición particular del experimento de este trabajo, así como
     \subitem Refutación (Ref): Fuera del alcance de este experimento. Sólo se realizará el análisis de comparación de los rasgos obtenidos en \cite{FisetEtAl08:BubblesForLetters}.
  \item El uso de tipografías ampliamente conocidas (por ej., la de Coca-Cola) facilita el reconocimiento de las letras.
     \subitem Hipótesis nula (H0): El uso de tipografías conocidas no mejora la performance en comparación con otras letras de la misma complejidad.
-    \subitem Refutación (Ref): En comparación con las otras dos tipografías, la tasa de aciertos de una letra debería comportarse linealmente con respecto a su complejidad.
+    \subitem Refutación (Ref): En comparación con las otras dos tipografías, se necesitará menos información para letras famosas versus otras de similar complejidad.
  \item Aún en casos en los que el sujeto no cree haber visto --- o ni siquiera conoce --- alguna tipografía famosa, el porcentaje de aciertos mejora significativamente.
-    \subitem H0: No hay variaciones en la performance para letras vistas durante el experimento, ni para aquellas definidas como conocidas.
+    \subitem H0: No hay variaciones en la cantidad de información requerida para aquellas tipografías reconocidas durante el experimento ni para aquellas definidas como conocidas.
     \subitem Ref: La mejora en la performance decrece desde las tipografías conocidas vistas en el experimento, las 
 	    famosas conocidas pero no vistas, las tipografías famosas no conocidas y las tipografías no famosas de similar complejidad.
  \item A mayor complejidad de las letras, menor eficiencia en el reconocimiento \cite{PelliEtAl06:LetterIdentification}
@@ -116,33 +116,33 @@ Se presentan letras en forma individual por 200ms, para que luego el sujeto pres
 \multirow{2}{*}{\textbf{Letra}} & \multicolumn{3}{|c|}{\textbf{Tipografía}} & \multirow{2}{*}{\textbf{Letra}} & \multicolumn{3}{|c}{\textbf{Tipografía}} \\
 \cline{2-4}\cline{6-8}
     & \textbf{Arial} & \textbf{Kunstler} & \textbf{Famosas} &     & \textbf{Arial} & \textbf{Kunstler} & \textbf{Famosas} \\\hline\hline
-\textbf{A}   &   9   &   20   &   9   &   \textbf{a}   &   9   &   15   &   11 \\\hline
-\textbf{B}   &   8   &   19   &   14   &   \textbf{b}   &   11   &   19   &   13 \\\hline
-\textbf{C}   &   7   &   15   &   14   &   \textbf{c}   &   8   &   15   &   12 \\\hline
-\textbf{D}   &   8   &   17   &   12   &   \textbf{d}   &   11   &   18   &   9 \\\hline
-\textbf{E}   &   9   &   19   &   12   &   \textbf{e}   &   10   &   20   &   9 \\\hline
-\textbf{F}   &   11   &   17   &   11   &   \textbf{f}   &   11   &   17   &   13 \\\hline
-\textbf{G}   &   10   &   15   &   14   &   \textbf{g}   &   10   &   16   &   10 \\\hline
-\textbf{H}   &   11   &   18   &   12   &   \textbf{h}   &   11   &   18   &   11 \\\hline
-\textbf{I}   &   11   &   17   &   12   &   \textbf{i}   &   11   &   16   &   10 \\\hline
-\textbf{J}   &   10   &   21   &   12   &   \textbf{j}   &   10   &   15   &   13 \\\hline
-\textbf{K}   &   7   &   15   &   10   &   \textbf{k}   &   8   &   19   &   13 \\\hline
-\textbf{L}   &   9   &   17   &   12   &   \textbf{l}   &   12   &   16   &   11 \\\hline
-\textbf{M}   &   9   &   18   &   8   &   \textbf{m}   &   10   &   16   &   10 \\\hline
-\textbf{N}   &   9   &   20   &   11   &   \textbf{n}   &   13   &   16   &   13 \\\hline
-\textbf{Ñ}   &   10   &   20   &   7   &   \textbf{ñ}   &   10   &   15   &   12 \\\hline
-\textbf{O}   &   9   &   17   &   13   &   \textbf{o}   &   9   &   18   &   13 \\\hline
-\textbf{P}   &   8   &   18   &   11   &   \textbf{p}   &   9   &   17   &   13 \\\hline
-\textbf{Q}   &   9   &   17   &   9   &   \textbf{q}   &   13   &   20   &   12 \\\hline
-\textbf{R}   &   7   &   15   &   8   &   \textbf{r}   &   14   &   19   &   13 \\\hline
-\textbf{S}   &   6   &   17   &   8   &   \textbf{s}   &   7   &   16   &   13 \\\hline
-\textbf{T}   &   11   &   17   &   12   &   \textbf{t}   &   13   &   16   &   12 \\\hline
-\textbf{U}   &   10   &   15   &   13   &   \textbf{u}   &   11   &   15   &   9 \\\hline
-\textbf{V}   &   7   &   19   &   14   &   \textbf{v}   &   11   &   20   &   11 \\\hline
-\textbf{W}   &   8   &   19   &   10   &   \textbf{w}   &   8   &   21   &   12 \\\hline
-\textbf{X}   &   6   &   17   &   7   &   \textbf{x}   &   6   &   16   &   5 \\\hline
-\textbf{Y}   &   9   &   15   &   8   &   \textbf{y}   &   9   &   14   &   8 \\\hline
-\textbf{Z}   &   7   &   14   &   9   &   \textbf{z}   &   7   &   16   &   6 \\\hline
+\textbf{A}   & 14   &   35   &   16   &   \textbf{a}   & 14   &   28   &   20   \\\hline
+\textbf{B}   & 14   &   35   &   22   &   \textbf{b}   & 18   &   37   &   24   \\\hline
+\textbf{C}   & 12   &   26   &   26   &   \textbf{c}   & 14   &   30   &   22   \\\hline
+\textbf{D}   & 14   &   31   &   22   &   \textbf{d}   & 18   &   31   &   16   \\\hline
+\textbf{E}   & 16   &   31   &   20   &   \textbf{e}   & 20   &   37   &   18   \\\hline
+\textbf{F}   & 22   &   31   &   18   &   \textbf{f}   & 20   &   37   &   22   \\\hline
+\textbf{G}   & 16   &   26   &   30   &   \textbf{g}   & 16   &   28   &   18   \\\hline
+\textbf{H}   & 20   &   31   &   22   &   \textbf{h}   & 18   &   30   &   18   \\\hline
+\textbf{I}   & 18   &   39   &   24   &   \textbf{i}   & 20   &   30   &   24   \\\hline
+\textbf{J}   & 16   &   41   &   24   &   \textbf{j}   & 22   &   26   &   24   \\\hline
+\textbf{K}   & 12   &   30   &   16   &   \textbf{k}   & 14   &   33   &   22   \\\hline
+\textbf{L}   & 16   &   31   &   26   &   \textbf{l}   & 26   &   30   &   20   \\\hline
+\textbf{M}   & 14   &   39   &   14   &   \textbf{m}   & 16   &   28   &   16   \\\hline
+\textbf{N}   & 16   &   39   &   18   &   \textbf{n}   & 20   &   26   &   22   \\\hline
+\textbf{Ñ}   & 18   &   39   &   12   &   \textbf{ñ}   & 20   &   26   &   22   \\\hline
+\textbf{O}   & 16   &   30   &   22   &   \textbf{o}   & 16   &   33   &   22   \\\hline
+\textbf{P}   & 14   &   33   &   22   &   \textbf{p}   & 16   &   30   &   22   \\\hline
+\textbf{Q}   & 18   &   35   &   18   &   \textbf{q}   & 24   &   37   &   20   \\\hline
+\textbf{R}   & 12   &   28   &   14   &   \textbf{r}   & 26   &   33   &   26   \\\hline
+\textbf{S}   & 12   &   35   &   16   &   \textbf{s}   & 14   &   28   &   22   \\\hline
+\textbf{T}   & 18   &   33   &   20   &   \textbf{t}   & 20   &   28   &   18   \\\hline
+\textbf{U}   & 16   &   26   &   28   &   \textbf{u}   & 18   &   26   &   16   \\\hline
+\textbf{V}   & 12   &   33   &   30   &   \textbf{v}   & 20   &   37   &   22   \\\hline
+\textbf{W}   & 16   &   37   &   18   &   \textbf{w}   & 14   &   33   &   22   \\\hline
+\textbf{X}   & 10   &   31   &   14   &   \textbf{x}   & 10   &   26   &   10   \\\hline
+\textbf{Y}   & 14   &   28   &   14   &   \textbf{y}   & 16   &   24   &   14   \\\hline
+\textbf{Z}   & 12   &   28   &   18   &   \textbf{z}   & 12   &   28   &   12   \\\hline
 \end{tabular}
 \end{table}
 
