--- a/TP1/INCC_TP1_Presentacion.tex
+++ b/TP1/INCC_TP1_Presentacion.tex
@@ -60,37 +60,33 @@ right,width=22mm]{Goettingen}
 \begin{frame}
   \frametitle{Preparaci\'on de los est\'imulos}
     \begin{figure}
-    \includegraphics[scale=0.35]{graficos/letras.png}
+    \includegraphics[scale=0.25]{graficos/estimulofinal.png}
       \caption{Preparación del estímulo final}
       \label{figura:FISET1}
     \end{figure}
 \end{frame}
 
 
-\section{Results}
+\section{Resultados}
 \begin{frame}
-  \frametitle{Results}
-%\begin{table}[htb]
-%   \tiny
-%   \centering
-%  \caption{PCCs for predicted vs. real binding in Fake and True methods with 2, 7 and 10 hidden neurons (best method in italics and best PCC in bold) }
-%\label{tab:results}
-%  \begin{tabular}{l|r||r|r||r|r||r|r}
-%    \hline
-%      \textbf{Allele} & \textbf{Size} & \textbf{True 02N} & \textbf{Fake 02N} & \textbf{True 07N} & \textbf{Fake 07N} & \textbf{True 10N} & \textbf{Fake 10N} \\\hline \hline
-%      HLA A*0201\_09 & 3089 & \textit{0.90867} & 0.87659 & \textit{0.91133} & 0.87317 & \textbf{0.91525} & 0.87312 \\\hline
-%      HLA A*0301\_09 & 2094 & \textit{0.87158} & 0.81958 & \textbf{0.88373} & 0.82268 & \textit{0.87994} & 0.82019 \\\hline
-%      HLA A*3101\_09 & 1869 & \textit{0.87277} & 0.81137 & \textit{0.88504} & 0.81500 & \textbf{0.88748} & 0.81351 \\\hline
-%      HLA A*0202\_09 & 1447 & \textit{0.86403} & 0.79526 & \textit{0.88985} & 0.79790 & \textbf{0.89163} & 0.80160 \\\hline
-%      HLA B*5801\_09 &  988 & \textbf{0.95187} & 0.86461 & \textit{0.95122} & 0.86256 & \textit{0.94953} & 0.86070 \\\hline
-%      Mamu A*01\_09  &  525 & \textit{0.90083} & 0.73711 & \textbf{0.90762} & 0.74464 & \textit{0.90414} & 0.74868 \\\hline
-%      HLA A*2403\_09 &  254 & \textit{0.96759} & 0.77899 & \textit{0.96857} & 0.76313 & \textbf{0.96915} & 0.76038 \\\hline
-%      HLA B*5701\_09 &   59 & \textbf{0.95035} & 0.76323 & \textit{0.94776} & 0.76913 & \textit{0.94781} & 0.77509 \\\hline
-%   \end{tabular}
-%\end{table}
-
+  \frametitle{Resultados}
+HIPOTESIS 1: TIPOGRAF\'IAS CONOCIDAS AUMENTA LA EFICIENCIA
 \end{frame}
 
+\begin{frame}
+  \frametitle{Resultados}
+HIPOTESIS 2: EFICIENCIADISMINUYE CON MAS COMPLEJIDAD
+\end{frame}
+
+\begin{frame}
+  \frametitle{Resultados}
+HIPOTESIS 3: RASGOS DE CADA LETRA
+\end{frame}
+
+\begin{frame}
+  \frametitle{Resultados}
+HIPOTESIS 4: OBSERVADOR IDEAL
+\end{frame}
 
 \section{Resumen}
 \begin{frame}
@@ -111,9 +107,29 @@ right,width=22mm]{Goettingen}
   \end{itemize}
 \end{frame}
 
+\section{Fin de la presentaci\'on}
 \begin{frame}%<handout:0>
   \titlepage
 \end{frame}
+
+%\begin{table}[htb]
+%   \tiny
+%   \centering
+%  \caption{PCCs for predicted vs. real binding in Fake and True methods with 2, 7 and 10 hidden neurons (best method in italics and best PCC in bold) }
+%\label{tab:results}
+%  \begin{tabular}{l|r||r|r||r|r||r|r}
+%    \hline
+%      \textbf{Allele} & \textbf{Size} & \textbf{True 02N} & \textbf{Fake 02N} & \textbf{True 07N} & \textbf{Fake 07N} & \textbf{True 10N} & \textbf{Fake 10N} \\\hline \hline
+%      HLA A*0201\_09 & 3089 & \textit{0.90867} & 0.87659 & \textit{0.91133} & 0.87317 & \textbf{0.91525} & 0.87312 \\\hline
+%      HLA A*0301\_09 & 2094 & \textit{0.87158} & 0.81958 & \textbf{0.88373} & 0.82268 & \textit{0.87994} & 0.82019 \\\hline
+%      HLA A*3101\_09 & 1869 & \textit{0.87277} & 0.81137 & \textit{0.88504} & 0.81500 & \textbf{0.88748} & 0.81351 \\\hline
+%      HLA A*0202\_09 & 1447 & \textit{0.86403} & 0.79526 & \textit{0.88985} & 0.79790 & \textbf{0.89163} & 0.80160 \\\hline
+%      HLA B*5801\_09 &  988 & \textbf{0.95187} & 0.86461 & \textit{0.95122} & 0.86256 & \textit{0.94953} & 0.86070 \\\hline
+%      Mamu A*01\_09  &  525 & \textit{0.90083} & 0.73711 & \textbf{0.90762} & 0.74464 & \textit{0.90414} & 0.74868 \\\hline
+%      HLA A*2403\_09 &  254 & \textit{0.96759} & 0.77899 & \textit{0.96857} & 0.76313 & \textbf{0.96915} & 0.76038 \\\hline
+%      HLA B*5701\_09 &   59 & \textbf{0.95035} & 0.76323 & \textit{0.94776} & 0.76913 & \textit{0.94781} & 0.77509 \\\hline
+%   \end{tabular}
+%\end{table}
 
 
 \end{document}
