--- a/TP1/Presentacion/Presentacionfinal.tex
+++ b/TP1/Presentacion/Presentacionfinal.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 
-%\usepackage[utf8x]{inputenc}
+\usepackage[utf8x]{inputenc}
 %\usepackage{default}
 \usetheme{Frankfurt}
 
@@ -19,7 +19,7 @@
 \end{frame}
 
 \section{Introducci\'on}
-\subsection{Experimento}
+\subsection{Demostración}
 
 %estímulo máscara random
 \begin{frame}
@@ -54,14 +54,14 @@
 \begin{frame}
   \frametitle{Objetivos del experimento}
   \begin{itemize}
-    \item Identificar rasgos utilizados por una persona para reconocer letras de distintas tipograf\'ias  \ldots \pause
+    \item Identificar rasgos utilizados por una persona para reconocer letras de distintas tipograf\'ias  \ldots 
 \end{itemize}
 
 \begin{block}{Hip\'otesis}
  \begin{itemize}
-      \item El uso de tipograf\'ias ampliamente conocidas facilita el reconocimiento de letras \pause
-      \item La eficiencia en el reconocimiento de las letras es inversamente proporcional a su complejidad \pause
-      \item Los rasgos de cada letra var\'ian de acuerdo a la tipograf\'ia que se est\'e utilizando \pause
+      \item El uso de tipograf\'ias ampliamente conocidas facilita el reconocimiento de letras 
+      \item La eficiencia en el reconocimiento de las letras es inversamente proporcional a su complejidad 
+      \item Los rasgos de cada letra var\'ian de acuerdo a la tipograf\'ia que se est\'e utilizando 
       \item Un observador ideal utilizar\'a rasgos distintos a los que utiliza una persona para identificar letras	
     \end{itemize}
 \end{block}
@@ -71,20 +71,21 @@
 \subsection{Antecedentes}
 %Pelli
 \begin{frame}
-\frametitle{Pelli}
+\frametitle{Feature Detection and Letter Identification(Pelli et al., 2006)}
 \begin{columns}[t]
 \column{.5\textwidth}
-\begin{block}{Feature Detection and Letter Identification (Pelli et al., 2006)}
+\title{Feature Detection and Letter Identification (Pelli et al., 2006)}
 \begin{itemize}
  \item Cookbook de cualquier experimento de reconocimiento de Letras
  \item Concepto de complejidad (Attneave)
 \end{itemize}
 
-\end{block}
+
 \column{.5\textwidth}
 
 \begin{figure}
- \includegraphics[scale=.20]{graficos/letras.png}
+ \includegraphics[width=\textwidth]{graficos/pelli4.png}
+\caption{Gráfico de eficiencia vs complejidad de varias tipografías distintas}
 \end{figure}
 
 \end{columns}
@@ -92,18 +93,19 @@
 
 %Gosselin
 \begin{frame}
- \frametitle{Gosselin}
+ \frametitle{Bubbles: a technique to reveal the use of information in recognition task (Gosselin \& Schyns, 2001)}
  \begin{columns}[t]
   \column{.5\textwidth}
-   \begin{block}{Bubbles (GosselinySchyns)}
+   
     \begin{itemize}
     \item Cookbook de cualquier experimento con Bubbles
     \item Bubbles locas
     \end{itemize}
-   \end{block}
+  
   \column{.5\textwidth}
    \begin{figure}
-   \includegraphics[scale=.20]{graficos/letras.png}
+   \includegraphics[width=\textwidth]{graficos/gosselin2.png}
+\caption{Bubbles aplicada al reconocimiento de expresión (ENEX) y género (GENDER)}
    \end{figure}
   \end{columns}
 \end{frame}
@@ -116,18 +118,20 @@
 \begin{columns}[t]
  \column{.5\textwidth}
   \begin{figure}
-    \includegraphics[scale=.10]{graficos/letras.png}
+    \includegraphics[width=.6\textwidth]{graficos/fiset1.png}
+\caption[Fiset et al]{Clasificación de imágenes por observadores humanos}
   \end{figure}
   \column{.5\textwidth}
    \begin{figure}
-    \includegraphics[scale=.1]{graficos/letras.png}
+    \includegraphics[width=\textwidth]{graficos/fiset5.png}
+\caption{Uso relativo de 10 rasgos de letras para el reconocimiento de letras Arial}
    \end{figure}
 \end{columns}
 
 \end{frame}
 
 
-
+\section{Experimento}
 \subsection{Diseño}
 
 %Elección tipografías
@@ -148,22 +152,83 @@
 \end{figure}
 \end{frame}
 
-%sujetos
+%Jueves
 \begin{frame}
-\frametitle{Sujetos}
+\frametitle{Primeros Pasos. Jueves}
 \begin{itemize}
+\item 13 sujetos
+ \item Pocos bloques
+\item Muchas burbujas
+\item Muy poca información
+\item Muchos gastos en golosinas
+\end{itemize}
+\textbf{Solución}: Ampliar set de datos y ajustar parámetros (bloques y burbujas)
+\end{frame}
+
+%Recauchutaje
+\begin{frame}
+ \frametitle{Rediseño}
+\begin{itemize}
+ \item Correcciones de errores menores (randoms, cantidad de burbujas (no se mostraba en todas las bandas), etc.)
+\item Más bloques por sujeto, por lo tanto, experimento más largo
+\item Mejora en la cantidad de burbujas inicial (mayor complejidad, mayor cantidad de burbujas iniciales)
+\item Filtrando casos en que no se llegó al 52\%
+\end{itemize}
+
+\end{frame}
+
+
+%Final
+\begin{frame}
+\frametitle{Etapa Final}
+\begin{itemize}
+\item 6 sujetos
 \item edades entre 21-33 años
 \item con estudios superiores
 \item se les mostraron alrededor de 2000 est\'imulos
-\item experimentadores sujetos... 2500 est\'imulos
+\item \underline{experimentadores sujetos}... 2500 est\'imulos
 \end{itemize}
 \end{frame}
 
-
 \section{Resultados}
-%Resultados
+
+
+
+%RASGOS
 \begin{frame}
-\frametitle{Resultados}
+ \frametitle{Cálculo de Rasgos}
+\begin{columns} [t]
+ \column{.5\textwidth}
+\begin{figure}
+ \includegraphics[width=.8\textwidth]{graficos/REFERENCIA.png}
+\caption{Código de colores para poder identificar los rasgos automáticamente}
+\end{figure}
+\column{.5\textwidth}
+\begin{figure}
+ \includegraphics[width=.5\textwidth]{graficos/letras.png}
+\caption{Uso relativo de los rasgos necesarios para identificar letras}
+\end{figure}
+\end{columns}
 \end{frame}
+
+
+
+%Discusión
+\section{Lecciones Aprendidas}
+\begin{frame}
+ \frametitle{Lecciones Aprendidas}
+\begin{itemize}
+\item Cantidad de respuestas necesarias (o estímulos a mostrar): 156.000= 3.9 días de experimentación continua.
+\item Resulta una técnica útil para el muestreo de espacios de un estímulo determinado
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+ \frametitle{Trabajos Futuros}
+\begin{itemize}
+ \item Bubbles en habla
+\end{itemize}
+\end{frame}
+
 
 \end{document}
