--- a/TP1/Presentacion/Presentacionfinal.tex
+++ b/TP1/Presentacion/Presentacionfinal.tex
@@ -1,6 +1,10 @@
-\documentclass{beamer}
-
+\documentclass[10pt]{beamer}
+%\documentclass[10pt,handout]{beamer}
+\usepackage[spanish]{babel}
 \usepackage[utf8x]{inputenc}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+
 %\usetheme{Frankfurt}
 %\usetheme{Ilmenau}
 %\usetheme{Luebeck}
@@ -9,184 +13,170 @@
 
 \title[Identificaci\'on de Letras Utilizando Bubbles]{Detecci\'on de Rasgos en la Identificaci\'on de Letras Utilizando Bubbles}
 \subtitle{Intr. a Neurociencia Cognitiva y Computacional}
-\author[Mart\'inez Soler,\\G\'omez Mayol,\\Cossio Mercado]{Christian Cossio Mercado,\\Mail\'en G\'omez Mayol,\\Miguel Mart\'inez Soler}
-\institute{Departamento de Computaci\'on - FCEyN, UBA}
+\author[Miguel, Mail\'en, Christian]{Christian Cossio Mercado,\\Mail\'en G\'omez Mayol,\\Miguel Mart\'inez Soler}
+\institute[FCEyN,UBA]{Departamento de Computaci\'on - FCEyN, UBA}
 \date{31 de mayo de 2011}
 
 
 \begin{document}
 
-\begin{frame}
+\begin{frame}%<handout:0>
 \titlepage
 \end{frame}
 
 \section{Introducci\'on}
-  \subsection{Demostraci\'on}
-
-      %estímulo máscara random
+  \subsection{Objetivos}
       \begin{frame}
-      \begin{figure}
-	\includegraphics[scale=.2]{graficos/letra.png}
-      \end{figure}
+	\frametitle{Objetivo del experimento}
+	\begin{itemize}
+		\item \textbf{Identificar rasgos utilizados por las personas para identificar letras presentadas en distintas tipograf\'ias}\pause
+		\item \alert{¿Cómo lo hacemos?}
+	\end{itemize}
       \end{frame}
 
+  \subsection{Todos Somos Sujetos}
+      %estímulo máscara random
+      \begin{frame}
+	\frametitle{Todos Somos Sujetos}
+	\begin{itemize}
+		\item Vamos a intentar identificar algunas letras\ldots
+	\end{itemize}
+      \end{frame}
 
+  %objetivos e hipótesis
+\part[Antecedentes]{Revisi\'on de Antecedentes}
+\frame{\partpage}
 
-  \subsection{Antecedentes}
+  \section{Antecedentes}
   %Pelli
 	\begin{frame}
-	\frametitle{Feature Detection and Letter Identification(Pelli et al., 2006)}
+	\frametitle{Feature Detection and Letter Identification\\(Pelli et al., 2006)}
 	\begin{columns}[t]
-	\column{.5\textwidth}
-	\title{Feature Detection and Letter Identification (Pelli et al., 2006)}
+	\column{.60\textwidth}
 	\begin{itemize}
-		\item Cookbook de cualquier experimento de reconocimiento de Letras
-		\item Concepto de complejidad (Attneave) FORMULA!
+		\item Conceptos de la identificación de letras y metodología experimental\pause
+		\item Definición de complejidad (Attneave)
+		  \begin{equation*}
+		   \mathnormal{\text{complejidad}(l) = \frac{\text{per\'imetro}(l)^2}{\text{superficie}(l)}}
+		  \end{equation*}\pause
 		\item Relación eficiencia/complejidad
 	\end{itemize}
 
-	\column{.5\textwidth}
+	\column{.45\textwidth}
 
 	\begin{figure}
 	\includegraphics[width=\textwidth]{graficos/pelli4.png}
-	\caption{Gráfico de eficiencia vs complejidad de varias tipografías distintas}
+	\caption{Eficiencia vs complejidad para distintas tipografías}
 	\end{figure}
-
 	\end{columns}
-	\end{frame}
+  \end{frame}
 
 %Gosselin
 	\begin{frame}
 	\frametitle{Bubbles: a technique to reveal the use of information in recognition task (Gosselin \& Schyns, 2001)}
 	\begin{columns}[t]
-	  \column{.5\textwidth}
-	  
+	  \column{.65\textwidth}
 	    \begin{itemize}
-	    \item Cookbook de cualquier experimento con Bubbles
-	    \item Bubbles locas
-	    \item AGREGAR IMAGEN DE BUBBLES (MASCARA)
+		\item Concepto de la técnica y del diseño del experimento
+		\item<2->Generación de un estímulo
+		    \begin{figure}
+		      \includegraphics[width=0.9\textwidth]{graficos/estimuloGosseling.png}
+		      \caption{Generaci\'on de un est\'imulo}
+		    \end{figure}
 	    \end{itemize}
-	  
-	  \column{.5\textwidth}
-	  \begin{figure}
-	  \includegraphics[width=\textwidth]{graficos/gosselin2.png}
-	\caption{Bubbles aplicada al reconocimiento de expresión (ENEX) y género (GENDER)}
-	  \end{figure}
+	  \column{.35\textwidth}
+	    \begin{itemize}
+		  \item<2->Variables en juego
+		  \only<2-2>{
+		    \begin{itemize}
+		      \item estímulo
+		      \item dimensiones del estímulo
+		      \item tamaño y cant. de burbujas
+		      \item observadores
+		    \end{itemize}
+		  }
+	    \end{itemize}
+	    \uncover<3->{
+		\begin{figure}
+		  \includegraphics[width=\textwidth]{graficos/gosselin2.png}
+		  \caption{Reconocimiento de expresión (ENEX) y género (GENDER)}
+		\end{figure}
+	    }
 	  \end{columns}
 	\end{frame}
 
 
 	%Fiset
-	\begin{frame}
-	\frametitle{Feature for Identification of Uppercase and Lowercase Letters (Fiset et al., 2008)}
+      \begin{frame}
+	\frametitle{Features for Identification of Uppercase and Lowercase Letters (Fiset et al., 2008)}
 
 	\begin{columns}[t]
-	\column{.5\textwidth}
-	  \begin{figure}
-	    \includegraphics[width=.6\textwidth]{graficos/fiset1.png}
-	\caption[Fiset et al]{Clasificación de imágenes por observadores humanos}
-	  \end{figure}
-	  \column{.5\textwidth}
-	  \begin{figure}
-	    \includegraphics[width=\textwidth]{graficos/fiset5.png}
-	\caption{Uso relativo de 10 rasgos de letras para el reconocimiento de letras Arial}
-	  \end{figure}
+	    \column{.4\textwidth}
+	    \begin{itemize}
+		\item Uso de Bubbles para identificación de letras
+		\item<2-> 54 letras Arial
+	    \end{itemize}	    
+	  \uncover<3->{
+	    \begin{figure}
+		\includegraphics[width=.6\textwidth]{graficos/fiset1.png}
+		\caption[Fiset et al]{Rasgos relevantes para humanos}
+	    \end{figure}
+	    
+	    \column{.6\textwidth}
+	    \begin{itemize}
+		\item Humanos: Agregan 1 burbuja hasta llegar al 52\% de aciertos
+		\item Obs.Ideal: Burbujas fijas, aumentan ruido hasta bajar al 52\% de aciertos
+	    \end{itemize}	    
+	    \begin{figure}
+		\includegraphics[width=0.5\textheight]{graficos/fiset5.png}
+		\caption{Importancia relativa de los rasgos}
+	    \end{figure}
+	  }
 	\end{columns}
+      \end{frame}
 
-	\end{frame}
-
-
+\part[Experimento]{Diseño del Experimento}
+\frame{\partpage}
 \section{Experimento}
- 
-  %objetivos e hipótesis
-  \subsection{Objetivos e Hip\'otesis}
-      \begin{frame}
-	\frametitle{Objetivos del experimento}
-	\begin{itemize}
-		\item Identificar rasgos utilizados por una persona para reconocer letras de distintas tipograf\'ias  \ldots 
-      \end{itemize}
 
+  \subsection{Objetivo e Hip\'otesis}
+      \begin{frame}
+	\frametitle{Objetivo e Hip\'otesis}
+	\begin{itemize}
+		\item Identificar rasgos utilizados por las personas para identificar letras presentadas en distintas tipograf\'ias
+      \end{itemize}	\pause
       \begin{block}{Hip\'otesis}
-      \begin{itemize}
-		\item El uso de tipograf\'ias ampliamente conocidas facilita el reconocimiento de letras 
-		\item La eficiencia en el reconocimiento de las letras es inversamente proporcional a su complejidad 
-		\item Los rasgos de cada letra var\'ian de acuerdo a la tipograf\'ia que se est\'e utilizando 
-		\item Un observador ideal utilizar\'a rasgos distintos a los que utiliza una persona para identificar letras	
-	  \end{itemize}
+	  \begin{enumerate}
+		\item\alert<3>{El uso de tipograf\'ias ampliamente conocidas facilita el reconocimiento de letras, aún cuando la persona no se da cuenta de ello}
+		\item\alert<3>{La performance en el reconocimiento de las letras es inversamente proporcional a su complejidad}
+		\item\alert<4>{Los rasgos de cada letra var\'ian de acuerdo a la tipograf\'ia que se est\'e utilizando}
+		\item\alert<4>{Habrá cambios en los rasgos de la `n' por la incorporación de la `ñ'}
+		\item\alert<4>{Se obtendrá rasgos similares a los encontrados en la bibliografía}
+		\item\alert<4>{Un observador ideal utilizar\'a rasgos distintos a los que utiliza una persona para identificar letras}
+	  \end{enumerate}
       \end{block}
 
       \end{frame}
-
- \subsection{Dise\~no}
+  \subsection{Dise\~no}
 
 	%Elección tipografías
 	\begin{frame}
 	\frametitle{Elecci\'on de tipograf\'ias}
-	\begin{figure}
-	\includegraphics[width=\textwidth]{graficos/letras.png}
-	\caption{tipograf\'ias elegidas}
-	\end{figure}
-	Boxplot de complejidades
+	    \begin{figure}
+		\includegraphics[width=\textwidth]{graficos/letras.png}\\ \pause
+		\includegraphics[width=0.8\textheight]{graficos/complejidadesBoxplot.png}
+		%\caption{Tipograf\'ias y sus Complejidades}
+	    \end{figure}
 	\end{frame}
-
-	%estímulos
-	\begin{frame}
-	\frametitle{Est\'imulos}
-	\begin{figure}
-	\includegraphics[width=\textwidth]{graficos/estimulofinal.png}
-	\caption{Armado del est\'imulo final}
-	\end{figure}
-	\end{frame}
-
-	%Jueves
-	\begin{frame}
-	\frametitle{Primeros Pasos. Jueves 12/5}
-	\begin{itemize}
-	\item 13 sujetos
-	\item Pocos bloques
-	\item Muchas burbujas
-	\item Muy poca información \pause
-	\item Muchos gastos en golosinas\pause
-	\end{itemize}
-	\textbf{Solución}: Ampliar set de datos y ajustar parámetros (bloques y burbujas)
-	\end{frame}
-
-	%Recauchutaje
-	\begin{frame}
-	\frametitle{Rediseño}
-	\begin{itemize}
-	\item Correcciones de errores menores (randoms, cantidad de burbujas (no se mostraba en todas las bandas), etc.)
-	\item Más bloques por sujeto, por lo tanto, experimento más largo
-	\item Mejora en la cantidad de burbujas inicial (mayor complejidad, mayor cantidad de burbujas iniciales)
-	\item Filtrando casos en que no se llegó al 52\%
-	\end{itemize}
-
-	\end{frame}
-
-
-	%Final
-	\begin{frame}
-	\frametitle{Etapa Final}
-	\begin{itemize}
-	\item 6 sujetos
-	\item edades entre 21-33 años
-	\item con estudios superiores
-	\item se les mostraron alrededor de 2000 est\'imulos
-	\item \underline{experimentadores sujetos}... 2500 est\'imulos
-	\end{itemize}
-	\end{frame}
-
-
-  \section{Resultados}
 
 	%RASGOS
 	\begin{frame}
-	\frametitle{Cálculo de Rasgos}
+	\frametitle{Identificaci\'on de Rasgos}
 	\begin{columns} [t]
 	\column{.5\textwidth}
 	\begin{figure}
 	\includegraphics[width=.8\textwidth]{graficos/REFERENCIA.png}
-	\caption{Código de colores para poder identificar los rasgos automáticamente}
+	\caption{Identificaci\'on de rasgos para la letra \~n}
 	\end{figure}
 	\column{.5\textwidth}
 	\begin{figure}
@@ -196,30 +186,140 @@
 	\end{columns}
 	\end{frame}
 
+	%estímulos
+	\begin{frame}
+	\frametitle{Generaci\'on de Est\'imulos}
+	    \begin{figure}
+	    \includegraphics[width=\textwidth]{graficos/estimulofinal.png}
+	    \caption{Armado del est\'imulo final}
+	    \end{figure}
+	\end{frame}
+
+	%Jueves
+	\begin{frame}
+	\frametitle{Primer Diseño del Experimento: Jueves 12/5}
+	    \begin{itemize}
+		\item 13 sujetos (Gracias a todos, nuevamente!)
+		\item Pocos bloques y ensayos (5 x 100, t $\approx$ 20min)
+		\item Se completa una encuesta al terminar (performance, tipografías famosas)
+		\item Muchas burbujas (todas las letras comienzan igual con la misma cantidad)
+		\item Muy poca información {\bf:-(} (para la mayoría no se alcanza un valor cercano al 52\% de aciertos)\pause
+		\item Muchos gastos en golosinas {\bf:-P}\pause
+	    \end{itemize}
+	\textbf{Posible Soluci\'on}: Ampliar la cantidad de ensayos y ajustar parámetros (bloques y burbujas)
+	\end{frame}
+
+	%Recauchutaje
+	\begin{frame}
+	\frametitle{Redise\~no del Experimento}
+	    \begin{itemize}
+		\item Más bloques por sujeto (17 x 100, t $\approx$ 1hr)
+		\item Correcciones de errores menores (randoms, cantidad de burbujas, burbujas por banda)
+		\item Mejora en la cantidad de burbujas inicial (mayor complejidad, mayor cantidad de burbujas iniciales)
+		\item Filtrando casos en que no se llegó al 52\% \pause
+		\item Se tiró los datos anteriores, reemplazando con los nuevos
+	    \end{itemize}
+	\end{frame}
+
+	%Final
+	\begin{frame}
+	\frametitle{Datos Finales}
+	    \begin{itemize}
+		\item 6 sujetos
+		\item Edades entre 21-33 años
+		\item Con estudios universitarios
+		\item 1700 ensayos por persona\pause
+		\item Para completar datos \ldots\pause también fuimos sujetos (2500 ensayos)
+	    \end{itemize}
+	\end{frame}
 
 
-%Discusión
-\section{Lecciones Aprendidas}
+% El uso de tipografías ampliamente conocidas facilita el reconocimiento de letras, aún cuando la persona no se da cuenta de ello
+% La performance en el reconocimiento de las letras es inversamente proporcional a su complejidad
+% Los rasgos de cada letra varían de acuerdo a la tipografía que se esté utilizando
+% Habrá cambios en los rasgos de la `n' por la incorporación de la `ñ'
+% Se obtendrá rasgos similares a los encontrados en la bibliografía
+% Un observador ideal utilizará rasgos distintos a los que utiliza una persona para identificar letras
+
+\part{Resultados}
+  \frame{\partpage}
+  \section{Gr\'aficos y Tablas}
+ 	\begin{frame}
+	\frametitle{Letras famosas}
+
+	\end{frame}
+  
+ 	\begin{frame}
+	\frametitle{Burbujas/Tiempo vs. Complejidad}
+
+	\end{frame}
+
+ 	\begin{frame}
+	\frametitle{Rasgos Detectados}
+
+	\end{frame}
+
+ 	\begin{frame}
+	\frametitle{Rasgos para \~N}
+
+	\end{frame}
+
+
+  \section{Conclusiones}
+	\begin{frame}
+	\frametitle{Conclusiones}
+	    \begin{itemize}
+	    \item Cantidad de respuestas necesarias (o estímulos a mostrar): 156.000= 3.9 días de experimentación continua.
+	    \item Resulta una técnica útil para el muestreo de espacios sin limitación en la cantidad de dimensiones
+	    \end{itemize}
+	\end{frame}
+
+  \section{Lecciones Aprendidas}
 	\begin{frame}
 	\frametitle{Lecciones Aprendidas}
-	\begin{itemize}
-	\item Cantidad de respuestas necesarias (o estímulos a mostrar): 156.000= 3.9 días de experimentación continua.
-	\item Resulta una técnica útil para el muestreo de espacios de un estímulo determinado
-	\end{itemize}
+	    \begin{itemize}
+	    \item Cantidad de respuestas necesarias (o estímulos a mostrar): 156.000= 3.9 días de experimentación continua.
+	    \item Resulta una técnica útil para el muestreo de espacios sin limitación en la cantidad de dimensiones
+	    \end{itemize}
+	\end{frame}
+
+  \section{Pendientes y Trabajos Futuros}
+	\begin{frame}
+	\frametitle{¿C\'omo Seguimos?}
+	  \begin{block}{Temas Pendientes}
+	    \begin{itemize}
+		\item 
+	    \end{itemize}
+	  \end{block} \pause
+
+	  \begin{block}{Trabajo Futuro}
+	   \begin{itemize}
+		\item Bubbles en habla (e.g., detección de rasgos para expresividad o emociones)
+	    
+	    \end{itemize}                     
+	  \end{block}	    
+	\end{frame}
+
+\author[Christian, Miguel, Mail\'en]{Mail\'en G\'omez Mayol,\\Miguel Mart\'inez Soler,\\Christian Cossio Mercado}
+
+\frame{\titlepage}
+
+\appendix
+\section{\appendixname}
+    \subsection{Material Adicional}
+	\begin{frame}
+	  \frametitle{Gr\'aficos}
+
+	\end{frame}
+    \subsection{Tests de Significatividad}
+	\begin{frame}
+	  \frametitle{Burbujas vs. Complejidad}
+
 	\end{frame}
 
 	\begin{frame}
-	\frametitle{Trabajos Futuros}
-	\begin{itemize}
-	\item Bubbles en habla
-	\end{itemize}
+	  \frametitle{Tiempo de Respuesta vs. Complejidad}
+
 	\end{frame}
-
-
-\author[Cossio Mercado,G\'omez Mayol,Mart\'inez Soler]{Mail\'en G\'omez Mayol,\\Miguel Mart\'inez Soler,\\Christian Cossio Mercado}
-\begin{frame}
- \titlepage
-\end{frame}
-
 
 \end{document}
